# vulkanisedfelt

./: .clang-format  .clang-tidy  .cmake-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  dlclose_stub.c
build_env/: flake.nix  nixos.linux.conan.profile
src/: Logger.cpp  Logger.hpp  VulkanApp.cpp  VulkanApp.hpp  draw.cpp  draw.hpp  hof.hpp  macros.hpp  main.cpp  setup.cpp  setup.hpp  types.cpp  types.hpp  vulkandemo.cpp  vulkandemo.hpp
src/draw/: detail.hpp
test_package/: conanfile.py
